@@ -1,0 +1,5 @@
+<%= importStatements %>
+
+export default <%= baseClass %>.extend({
+  firebase: new Firebase(<%= firebaseUrl %>)
+});
