@@ -1,3 +1,5 @@
+added - The default generator overrides `config/environments.js`
+added - A blueprint for generating firebase adapters
 changed - Allow Ember Data versions `1.0.0.beta.11` through `beta.14.x`.
 fixed - Use `EnumerableUtils` methods for Ember configs with `EXTEND_PROTOTYPES` set to false.
 important - EmberFire uses es6 modules. Please check the documentation on updated usage info.
